--- a/applied_statistics/HouseSalesPrediction.html
+++ b/applied_statistics/HouseSalesPrediction.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2023-10-28" />
 
-<title>House Sales Prediction</title>
+<title>House Price Prediction</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,7 +350,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">House Sales Prediction</h1>
+<h1 class="title toc-ignore">House Price Prediction</h1>
 <h4 class="author">Lohit Marla</h4>
 <h4 class="date">2023-10-28</h4>
 
